--- a/src/components/Panel.css
+++ b/src/components/Panel.css
@@ -14,8 +14,53 @@
   
   body {
     font-family: 'Inter', sans-serif;
+    margin:0;
   }
+  .appwrap{
+    width: 530px;
+  }
+ 
+.draggable {
+  -webkit-app-region: drag;
   
+}
+.close-btn{
+  border: none;
+  background: none;
+  font-size: 35px;
+  color: #810a0a;
+  transform: translateY(100%);
+  transition: transform 0.5s ease-in-out;
+}
+.close-btn:hover{
+  color: #ad0d0d;
+}
+
+.minimize-btn{
+  border: none;
+  background: none;
+  font-size: 35px;
+  color: #8d8080;
+  transform: translateY(100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.minimize-btn:hover{
+  color:#5a5959
+}
+.btn {
+  -webkit-app-region: no-drag;
+}
+
+.window-controls{
+    padding-right: 40px;
+    float:right;
+    -webkit-app-region: no-drag;
+    overflow: hidden;
+}
+.mainApp:hover .window-controls{
+  
+}
   strong {
     font-weight: bold; 
   }
@@ -33,19 +78,20 @@
     background-color: #ddedf5;
     padding: 40px 15px;
     border-radius: 0 0 14px 14px;
-    margin: -40px auto;
+    margin: -40px auto 40px;
     position: relative;
   }
   
   .panel-container {
-    
+    overflow: hidden;
+    width:490px;
+    max-height: 600px;
     
   }
 
   .mainApp{
     width:450px;
     height:75px;
-    z-index: 999;
     display: flex;
     align-items: center;
     padding: 20px;
@@ -54,7 +100,7 @@
     -webkit-backdrop-filter: blur(80px);
     backdrop-filter: blur(80px);
     box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.1);
-    background-color: #450d59;
+    background-color: #450d59db;
     position: relative;
     z-index: 1;
   }
@@ -63,6 +109,7 @@
     display: block;
     width: 75px;
     float: left;
+    -webkit-app-region: no-drag;
   }
 
   .btn.send-btn{
@@ -73,6 +120,7 @@
     font-size: 54px;
     color: #450d59;
     background-color: #fff;
+    -webkit-app-region: no-drag;
   }
 
   
@@ -83,6 +131,7 @@
     color: #fff;
     background-color: #ffffff00;
     border: none;
+    -webkit-app-region: no-drag;
   }
 
   .apptitle {
