--- a/src/components/Panel.css
+++ b/src/components/Panel.css
@@ -77,6 +77,7 @@ strong {
     border-radius: 0 0 14px 14px;
     margin: -40px auto 40px;
     position: relative;
+  
   }
   
   .panel-container {
@@ -159,3 +160,26 @@ strong {
         cursor: pointer;
 }
       
+.innerpage::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.13);
+	background-color: #F5F5F5;
+}
+
+.innerpage::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+.innerpage::-webkit-scrollbar-thumb
+{
+	border-radius: 6px;
+  background-color: #380a4956;
+}
+
+.innerpage{
+  overflow-y: scroll;
+  height: 400px;
+  scrollbar-gutter: stable both-edges;
+}
