--- a/src/components/contacts.css
+++ b/src/components/contacts.css
@@ -20,7 +20,7 @@
   .avatar {
     width: 40px;
     height: 40px;
-    background-color: purple;
+    background-color: #450d59;
     color: white;
     border-radius: 50%;
     display: flex;
@@ -159,17 +159,65 @@
 .edit-btn {
     display: none;
     position: absolute;
-    right: 75px;
+    right: 70px;
     top: 50%;
     transform: translateY(-50%);
     background: #ffffff00;
     color: #2e126d;
     border: none;
     cursor: pointer;
-    padding: 5px 10px;
+    padding: 5px 5px;
     font-size: 20px;
 }
-
-.contact-item:hover .edit-btn {
+.trash-btn {
+  display: none;
+  position: absolute;
+  right: 100px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #ffffff00;
+  color: #2e126d;
+  border: none;
+  cursor: pointer;
+  padding: 5px 5px;
+  font-size: 17px;
+}
+.trash-btn:hover{
+  color:rgb(165, 14, 14);
+}
+.edit-btn:hover{
+  color:rgb(11, 93, 3);
+}
+.contact-item:hover .edit-btn{
     display: block;
+}
+.contact-item:hover .trash-btn{
+  display: block;
+}
+.group-filters{
+  padding: 10px;
+}
+.group-filters button {
+  font-size: .825em;
+	text-decoration: none;
+	font-weight: 700;
+	padding: .35em 1em;
+	background-color: #eaeef1;
+	background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.1));
+	border-radius: 3px;
+	color: #450d59;
+	text-shadow: 0 1px 1px rgba(255,255,255,.7);
+	box-shadow: 0 0 0 1px rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.2), inset 0 1px 2px rgba(255,255,255,.7);
+  border:0px;
+  margin: 5px;
+}
+
+.group-filters button:hover {
+  background-color: #e0e0e0;
+}
+
+.group-filters button.active {
+  background-color: #d0d3d6;
+	background-image: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,0));
+	box-shadow: inset 0 0 2px rgba(0,0,0,.2), inset 0 2px 5px rgba(0,0,0,.2), 0 1px rgba(255,255,255,.2);
 }
