--- a/src/components/contacts.css
+++ b/src/components/contacts.css
@@ -194,11 +194,27 @@
 .contact-item:hover .trash-btn{
   display: block;
 }
-.group-filters{
+.group-items{
   padding: 10px;
 }
-.group-filters button {
-  font-size: .825em;
+.group-items input[type=checkbox] {
+  display:none;
+}
+
+.group-items {
+
+}
+
+.group-items:hover {
+  background-color: #e0e0e0;
+}
+
+.group-filters {
+  display: ruby;
+}
+
+.group-filters label {
+    font-size: .825em;
 	text-decoration: none;
 	font-weight: 700;
 	padding: .35em 1em;
@@ -210,14 +226,46 @@
 	box-shadow: 0 0 0 1px rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.2), inset 0 1px 2px rgba(255,255,255,.7);
   border:0px;
   margin: 5px;
+  display: inline-block;
+  cursor: pointer;
 }
 
-.group-filters button:hover {
-  background-color: #e0e0e0;
+.group-filters label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #555;
+  background-color: #fff;
+  border-radius: 3px;
 }
 
-.group-filters button.active {
+.group-filters input[type="checkbox"]:checked + label {
   background-color: #d0d3d6;
 	background-image: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,0));
 	box-shadow: inset 0 0 2px rgba(0,0,0,.2), inset 0 2px 5px rgba(0,0,0,.2), 0 1px rgba(255,255,255,.2);
+  color: #a5300c;
+}
+
+.group-filters label:after {
+  content: '';
+  position: absolute;
+  left: 5px;
+  top: 9px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+  display: none;
+}
+
+.group-filters input[type="checkbox"]:checked + label:after {
+  display: block;
+}
+
+.group-filters input[type="checkbox"] {
+  display: none; /* Hide checkbox */
 }
