--- a/src/components/contacts.css
+++ b/src/components/contacts.css
@@ -275,3 +275,89 @@
 .group-filters input[type="checkbox"] {
   display: none; /* Hide checkbox */
 }
+
+.gbtn{
+  font-size: .825em;
+	text-decoration: none;
+	font-weight: 700;
+	padding: .35em 1em;
+	background-color: #eaeef1;
+	background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.1));
+	border-radius: 3px;
+	color: #450d59;
+	text-shadow: 0 1px 1px rgba(255,255,255,.7);
+	box-shadow: 0 0 0 1px rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.2), inset 0 1px 2px rgba(255,255,255,.7);
+  border:0px;
+  margin: 5px;
+  display: inline-block;
+  cursor: pointer;
+}
+.gbtn-selected{
+  background-color: #d0d3d6;
+	background-image: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,0));
+	box-shadow: inset 0 0 2px rgba(0,0,0,.2), inset 0 2px 5px rgba(0,0,0,.2), 0 1px rgba(255,255,255,.2);
+  color: #a5300c;
+}
+
+.ctouter{
+  margin: 0 auto;
+  color: #450d59;
+  text-align: center;
+  border-radius: 36%;
+  font-size: 6em;
+  font-weight: 900;
+}
+.sendbtnall{
+  font-size: 1.825em;
+	text-decoration: none;
+	font-weight: 700;
+	padding: .35em 1em;
+	background-color: #eaeef1;
+	background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.1));
+	border-radius: 3px;
+	color: #450d59;
+	text-shadow: 0 1px 1px rgba(255,255,255,.7);
+	box-shadow: 0 0 0 1px rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.2), inset 0 1px 2px rgba(255,255,255,.7);
+  border:0px;
+  margin: 5px;
+  display: inline-block;
+  cursor: pointer;
+}
+.sendbtnall:active{
+  background-color: #d0d3d6;
+	background-image: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,0));
+	box-shadow: inset 0 0 2px rgba(0,0,0,.2), inset 0 2px 5px rgba(0,0,0,.2), 0 1px rgba(255,255,255,.2);
+  color: #a5300c;
+}
+.innerpage a{
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+}
+.innerpage h2 {
+  text-align: center;
+    font-size: 0.8em;
+    color: #77106e;
+    margin-top:20px;
+}
+.innerpage p{
+  text-align: center;
+    font-size: 0.8em;
+    color: #77106e;
+}
+.sgroup{
+  display: ruby;
+}
+
+button.sendbtnall:disabled {
+  color: grey;
+  cursor: not-allowed;
+}
+.infobtn{
+  border: none;
+    background-color: #f1f1f1;
+    color: #4f4f8d;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 5px;
+}
